--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/Unidad2/Programa 9/Programa09.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/Unidad2/Programa 9/Programa09.html
@@ -1,3 +1,7 @@
+<!--Autor: Cosme Magaña-->
+<!--libreria jspdf la cual nos permite generar pdfs-->
+<!--13/03/2019-->
+
 <html>
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,6 +26,9 @@
 		<center><input type="button" class="btn btn-warning" id="button" value="Descargar"/></center>
 
 	<script>
+
+
+  //funcion donde tomaremos los valores llamando a los diferentes input para rellenar el formulario
 	$('#button').click(function() {
 
 		 var doc = new jsPDF();
