--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/Unidad2/Programa 10/Programa10.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/Unidad2/Programa 10/Programa10.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html><!-- Crear Grafica -->
+<!--Autor:Cosme Magaña
+13/03/19
+Libreria chart-->
 <html lang="en" dir="ltr">
   <head>
     <script type="text/javascript" src="dist/jquery-1.12.0.min.js"> </script>
