--- a/TopicosAvanzados19A/public_html/Cosme_Magaña/Unidad2/Programa 9/Programa09.html
+++ b/TopicosAvanzados19A/public_html/Cosme_Magaña/Unidad2/Programa 9/Programa09.html
@@ -42,9 +42,10 @@
 		doc.setFontSize(15);
 
 
-		doc.text(15, 20, "Por este medio se le informa que el alumno "+name+"\rcon matricula "+matricula+" de la carrea de "+carrera+"\rcursando actualmente el "+semestre+" semestre no pudo asistir a clases\ren la fecha "+fecha+" por cuestiones ajenas a el.\rEsperemos considere la asistencia en la fecha emitida.");
-    doc.text('Atentamente: \rServicios Escolares\r________________________\rFirma de responsable.',150,120,'center');
-    doc.save('justificacion.pdf');
+    		doc.text(15, 20, "Por este medio se le informa que el alumno "+name+"\rcon matricula "+matricula+" de la carrea de "+carrera+"\rcursando actualmente el "+semestre+" semestre es alumno regular \ren la fecha "+fecha+"");
+        doc.text('Atentamente: \rServicios Escolares\r________________________\rFirma de responsable.',150,120,'center');
+        doc.save('justificacion.pdf');
+
 
 
 	});
