--- a/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program09/Program09.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program09/Program09.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!--
+
+Nombre: Francisco Montalvo Hidalgo
+Profesor:Melquizedec Moo Medina
+Programa: Generando archivos con formato pdf
+Fecha:11/mar/2019
+
+-->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -22,18 +30,21 @@
     </div>
 
     <script>
+    //Con esta función mediante el id le decimos al boton que tome los valores escritos en los campospara asignarlos a una variable
   	  $('#button').click(function() {
+        //Aqui generamos nuestro pdf
   		var doc = new jsPDF();
   		var name = $('#name').val();
   		var carrera = $('#carrera').val();
   		var semestre = $('#semestre').val();
   		var matricula = $('#matricula').val();
       var fecha = $('#fecha').val();
-
+      //le asignamos un tamaño a la fuente de el pdf
   		doc.setFontSize(15);
-
+      //Escribimos texto en el pdf
   		doc.text(15, 20, "Por este medio se le informa que el alumno "+name+"\rcon matricula "+matricula+" de la carrea de "+carrera+"\rcursando actualmente el "+semestre+" semestre no pudo asistir a clases\ren la fecha "+fecha+" por cuestiones ajenas a el.\rEsperemos considere la asistencia en la fecha emitida.");
       doc.text('Atentamente: \rServicios Escolares\r________________________\rFirma de responsable.',150,120,'center');
+      //Guardamos el pdf con un nombre para que pueda ser generado
        doc.save('justificacion.pdf');
 
 
