--- a/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program10/Programa10.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program10/Programa10.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html><!-- Crear Grafica -->
+<!DOCTYPE html><!--
+
+  Nombre: Francisco Montalvo Hidalgo
+  Profesor:Melquizedec Moo Medina
+  Programa: Generando Graficas en un html
+  Fecha:13/mar/2019
+ -->
 <html lang="en" dir="ltr">
   <head>
     <script type="text/javascript" src="dist/jquery-1.12.0.min.js"> </script>
     <script type="text/javascript" src="dist/Chart.bundle.min.js"> </script>
     <script type="text/javascript">
-
+    //Le decimos a el programa que cuando el documento este cargado completamente ejecute la función
       $(document).ready(function(){
-
+        //Se crea una variable de tipo arreglo para despues enviarla a la grafica
         var datos={
           type: "pie",
           data:{
@@ -39,7 +45,9 @@
               responsive: true,
             }
         };
+        //Aqui en una variable indicamos que se pondra una grafica en 2d para el documento
         var canvas = document.getElementById('chart').getContext('2d');
+        //Pasamos los parametros a nuestra grafica
         window.pier = new Chart(canvas, datos);
 
         setInterval(function(){
@@ -52,11 +60,15 @@
               "#ABB0EB",
               "#C6ABEB"
             ],
+            //Se añaden valores random para graficar
             data: [getRandom(),getRandom(),getRandom(),getRandom(),getRandom()]
           };
+          //Le decimos a la variable datos que obtenga los valores random
           datos.data.datasets.push(newData);
+          //Se crea un ciclo para que la grafica se vaya actualizando en tiempo real cada 5 segundos
           window.pie.update();
         },5000);
+        //Funcion que genera los numeros random
         function getRandom(){
           return Math.round(Math.random()=100);
         }
