--- a/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program12/AngularJS/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/FrankMontalvo/U2/Program12/AngularJS/public_html/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!--
-Nombre: Jesus Alberto Lira Romero
+Nombre: Francisco Montalvo Hidalgo
 Profesor: Melquizedec Moo Medina
 Programa: AngularJS
 Description: Ejemplo de exposicion.
             Generador de un documento responsivo mediante la Libreria
             AngularJS, en el cual lo que ingreses sera mostrado en pantalla.
-Fecha: 13/mar/2019
+Fecha: 16/mar/2019
 -->
 <!--con ng-app inicializamos angular, a esto se le llama directiva-->
 <html ng-app>
