--- a/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa14/programa14.html
+++ b/TopicosAvanzados19A/public_html/Jesus_Lira/Unidad 2/Programa14/programa14.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
+<!--
+Nombre: Jesus Alberto Lira Romero
+Profesor: Melquizedec Moo Medina
+Programa: Programa14.html
+          Hipodromos
+Description: Creacion de un juego de azar utilizando hilos
+            haciendo movimientos "simultaneos"
+Fecha: 18/mar/2019
+-->
 <html lang="en">
   <head>
+    <!-- Librerias Utilizadas-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="Concurrent.Thread.Compile.js"></script>
@@ -20,24 +30,26 @@
     <div class="nombreCaballos">
       <h4>Inserta Nombres de los Caballos</h4>
       <div class="col-xs-2"> <!-- tamaño del input -->
+        <!-- div para insertar nombre de los caballos -->
         <input type="text" id="inputCaballo1" name="" value="" class="form-control" placeholder="Inserta Nombre"><br>
         <input type="text" id="inputCaballo2" name="" value="" class="form-control" placeholder="Inserta Nombre"><br>
         <input type="text" id="inputCaballo3" name="" value="" class="form-control" placeholder="Inserta Nombre"><br>
       </div>
-        <button class="btn btn-success"onclick="ejecutar();">Iniciar Carrera</button>
+        <button class="btn btn-success"onclick="ejecutar();">Iniciar Carrera</button> <!-- boton que ejecuta la funcion "ejecutar(); que se encuentra en Programa14.js" -->
     </div>
 
-<div class="separador"></div>
+<div class="separador"></div> <!-- separador de DIV -->
 
+<!-- div de metros recorridos por los caballos -->
 <h4>Carrera en curso</h4>
 <div class="metros">
-    <div class="col-xs-4">
-      <input type="text" id="metrosRecorridos1" class="form-control" name="" value=""><br>
+    <div class="col-xs-4"><!-- tamaño del input -->
+      <input type="text" id="metrosRecorridos1" class="form-control" name="" value=""><br> <!-- Utilizando estilos de bootstrap -->
       <input type="text" id="metrosRecorridos2" class="form-control" name="" value=""><br>
       <input type="text" id="metrosRecorridos3" class="form-control" name="" value=""><br>
     </div>
 </div>
-
+<!-- nombre de la clase / src / mensaje para cuando no se encuentre la imagen-->
     <img class="caballos" src="IMG/caballos.gif" alt="La imagen no se ha podido Cargar :(">
 
   </body>
