--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 11/Ajax2/EjemploExpo.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 11/Ajax2/EjemploExpo.html
@@ -4,7 +4,7 @@
 <body>
 
 <div id="demo">
-<h1>The XMLHttpRequest Object</h1>
+<h1>Pedro Adrián Sánchez Cárdenas</h1>
 <button type="button" onclick="loadDoc()">Change Content</button>
 </div>
 
