--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Programa14.css">
   </head>
 
-  <body style="background-color:#55F50D;"> 
+  <body style="background-color:#55F50D;">
     <div class="titulo">
 
       <h1>Hipodromo "Dwayne Pedro La Roca Johnson"</h1>
@@ -30,7 +30,7 @@
 
 <div class="separador"></div>
 
-<h4>Metros recorridos...</h4>
+<h4>Metros recorridos</h4>
 <div class="metros">
     <div class="col-xs-4">
       <input type="text" id="metrosRecorridos1" class="form-control" name="" value=""><br>
