--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 12/AngularJS/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 12/AngularJS/public_html/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
 <!--
-Nombre: Jesus Alberto Lira Romero
+Nombre: Pedro Adrián Sánchez Cárdenas.
 Profesor: Melquizedec Moo Medina
 Programa: AngularJS
 Description: Ejemplo de exposicion.
@@ -8,10 +7,9 @@ Description: Ejemplo de exposicion.
             AngularJS, en el cual lo que ingreses sera mostrado en pantalla.
 Fecha: 13/mar/2019
 -->
-<!--con ng-app inicializamos angular, a esto se le llama directiva-->
+<!DOCTYPE html>
 <html ng-app>
 <head>
-    <!--Angular es JavaScript que se ejecuta del lado del cliente (Browser)-->
     <title>Installation - Angular JS</title>
 </head>
 <body>
