--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 14/index.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 14/index.html
@@ -1,3 +1,11 @@
+<!--
+Nombre: Pedro Adrián Sánchez Cárdenas.
+Profesor: Melquizedec Moo Medina
+Programa: Concurrent.
+Description: Realizamos un ejemplo sobre la concurrencia y la forma en como manipula los datos
+              la computadora.
+Fecha: 13/mar/2019
+-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
