--- a/TopicosAvanzados19A/public_html/RodrigoDiaz/Exposicion/ejemplo2.html
+++ b/TopicosAvanzados19A/public_html/RodrigoDiaz/Exposicion/ejemplo2.html
@@ -31,7 +31,7 @@
 
 		var canvas = document.getElementById('chart').getContext('2d');
 		window.bar = new Chart(canvas, {
-			type : "bar",
+			type : "bubble",
 			data : datos,
 			options : {
 				elements : {
