--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/Ventas.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/TopicosAvanzadosDeProgramacion/public_html/Ventas.html
@@ -13,24 +13,24 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style type="text/css">
     body {
-        color: #000000; 
-		background: #00D3BC;   
+        color: #000000;    <!--color de la captura de datos-->
+		background: #00D3BC;    <!--del fondo de la pagina-->
 		font-family: 'Varela Round', sans-serif;
-		font-size: 13px;  
+		font-size: 13px;    <!--tamaño de las letras de la cabeza-->
 	}
 	.table-wrapper {
         background: #fff;
-        padding: 20px 25px;
+        padding: 20px 25px; <!--Tamaño del titulo la tabla-->
         margin: 30px 0;
 		border-radius: 3px;
         box-shadow: 0 1px 1px rgba(0,0,0,.05);
     }
-	.table-title {    
+	.table-title {       <!--tamaño del cuadro princiapal-->
 		padding-bottom: 15px;
 		background: #00D3BC;
-		color: #fff; 
+		color: #fff;  <!--color del titulo del cuadro-->
 		padding: 160px 30px;
-		margin: -20px -25px 10px; 
+		margin: -20px -25px 10px;  <!--ancho del cuadro-->
 		border-radius: 3px 3px 0 0;
     }
     .table-title h2 {
@@ -40,7 +40,7 @@
 	.table-title .btn-group {
 		float: right;
 	}
-	.table-title .btn {  
+	.table-title .btn {   <!--tamaño del cuadro de agregar y eliminar-->
 		color: #fff;
 		float: right;
 		font-size: 13px;
@@ -51,7 +51,7 @@
 		outline: none !important;
 		margin-left: 10px;
 	}
-	.table-title .btn i {  
+	.table-title .btn i {      <!--tamaño del + --->
 		float: left;
 		font-size: 21px;
 		margin-right: 5px;
@@ -60,7 +60,7 @@
 		float: left;
 		margin-top: 2px;
 	}
-    table.table tr th, table.table tr td {  
+    table.table tr th, table.table tr td {    <!--espacio entre los productos-->
         border-color: #e9e9e9;
 		padding: 12px 15px;
 		vertical-align: middle;
