Actualizacion de proyecto

--- a/TopicosAvanzados19A/public_html/JuanMezquita/Unidad2/Programa14.html
+++ b/TopicosAvanzados19A/public_html/JuanMezquita/Unidad2/Programa14.html
@@ -24,7 +24,8 @@ function ejecutar(){
 
     </script>
   </head>
-  <body>
+  <body background="carrera5.jpg">
+
 <label>Nombre del caballo:</label>
     <input type="text" id="inputCaballo1"/>puntaje:<input type="text" id="input1" readonly="yes"/></br>
 <label>Nombre del caballo:</label>
