--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/index.html
@@ -5,10 +5,10 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js"> <!--<![endif]-->
 <head>
-    <title>Bienvenidos
+    <title>Bienvenidos</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    </title>
+
 
     <!-- meta -->
     <meta charset="utf-8">
@@ -25,9 +25,37 @@
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Kreon:300,400,700'>
 
     <!-- js -->
-    <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-</head>
+    <script>
+
+    //aqui comeinza ajax
+    function mostrarSugerencia(str) {
+    var xmlhttp;
+    if (str.length==0) { document.getElementById("txtSugerencia").innerHTML=""; return; }
+    xmlhttp=new XMLHttpRequest();
+    xmlhttp.onreadystatechange = function() {
+      if (xmlhttp.readyState==4 && xmlhttp.status==200) {
+        document.getElementById("txtSugerencia").innerHTML=xmlhttp.responseText;
+        }
+    }
+    xmlhttp.open("GET","MENU.php?q="+str,true);
+    xmlhttp.send();
+    }
+    //aqui termian ajax
+    </script>
+  </head>
 <body data-spy="scroll" data-target="#navbar" data-offset="120" >
+
+  <h3 style="color:grey";>BUSQUE SU COMIDA O BEBIDA FAVORITA</h3>
+
+  <form action="">
+
+  Nombre: <input type="text" id="txt1" onkeyup="mostrarSugerencia(this.value)" />
+
+  </form>
+
+  <p>Sugerencias: <span id="txtSugerencia"></span></p>
+  <!--AQUI TERMINA AJAX-->
+
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -106,11 +134,6 @@
         <!-- /.container -->
         <section class="ss-style-bottom"></section>
     </div><!-- #story -->
-
-
-
-
-
 
     <div id="food-menu" class="light-wrapper">
         <section class="ss-style-top"></section>
@@ -283,18 +306,6 @@
     </div><!--/#food-menu-->
 
 <button>Comidas mas solicitadas</button>
-
-
-
-
-
-
-
-
-
-
-
-
 
     <footer id="footer" class="dark-wrapper">
         <section class="ss-style-top"></section>
