--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/Pruebas.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Login/Pruebas.html
@@ -9,6 +9,8 @@
 	<script id="Lol">
 
 		var doc = new jsPDF();
+		doc.setTextColor(50);
+		doc.text(90, 10, 'Menú "La lupita"');
 
 	doc.setTextColor(50);
 	doc.text(20, 20, 'Ceviches');
@@ -18,13 +20,13 @@
 	doc.setTextColor(50);
 	doc.text(20, 35, 'Pescado............100');
 	doc.setTextColor(50);
-	doc.text(20, 40, 'Pulpo...............100');
+	doc.text(20, 40, 'Pulpo.................100');
 	doc.setTextColor(50);
-	doc.text(20, 45, 'Mixto...............100');
+	doc.text(20, 45, 'Mixto..................100');
 	doc.setTextColor(50);
-	doc.text(20, 50, 'surimi..............100');
+	doc.text(20, 50, 'surimi.................100');
 	doc.setTextColor(50);
-	doc.text(20, 55, 'Nolon...............100');
+	doc.text(20, 55, 'Nolon.................100');
 
 	doc.setTextColor(50);
 	doc.text(20, 65, 'Cocteles/Cocktails');
@@ -32,28 +34,30 @@
 	doc.setTextColor(50);
 	doc.text(20, 75, 'Camaron...........100');
 	doc.setTextColor(50);
-	doc.text(20, 80, 'Pulpo...............100');
+	doc.text(20, 80, 'Pulpo.................100');
 	doc.setTextColor(50);
-	doc.text(20, 85, 'Mixto...............100');
+	doc.text(20, 85, 'Mixto..................100');
 	doc.setTextColor(50);
-	doc.text(20, 90, 'Nolon...............100');
+	doc.text(20, 90, 'Nolon.................100');
 
 	doc.setTextColor(50);
 	doc.text(20, 100, 'Camarones/Shrimps');
 
 	doc.setTextColor(50);
-	doc.text(20, 110, 'Empanizado...........100');
+	doc.text(20, 110, 'Empanizado.......100');
 	doc.setTextColor(50);
-	doc.text(20, 115, 'Empanizado con spaguetti...............100');
+	doc.text(20, 115, 'Empanizado con spaguetti.......100');
 	doc.setTextColor(50);
-	doc.text(20, 120, 'AL mojo de ajo...............100');
+	doc.text(20, 120, 'AL mojo de ajo.....100');
 	doc.setTextColor(50);
-	doc.text(20, 125, 'A la parrilla...............100');
+	doc.text(20, 125, 'A la parrilla...........100');
 	doc.setTextColor(50);
-	doc.text(20, 130, 'Con spaguetti...............100');
+	doc.text(20, 130, 'Con spaguetti.......100');
 
 	doc.setTextColor(50);
-	doc.text(20, 140, 'Orden de pollo y puerco al gusto/Order chicken and pork to taste');
+	doc.text(20, 140, 'Orden de pollo y puerco al gusto/');
+	doc.setTextColor(50);
+	doc.text(20, 145, 'Order chicken and pork to taste');
 
 	doc.setTextColor(50);
 	doc.text(20, 150, 'Filetes/Steaks');
@@ -61,13 +65,13 @@
 	doc.setTextColor(50);
 	doc.text(20, 160, 'Empanizado...........100');
 	doc.setTextColor(50);
-	doc.text(20, 165, 'Relleno J/Q...............100');
+	doc.text(20, 165, 'Relleno J/Q............100');
 	doc.setTextColor(50);
-	doc.text(20, 170, 'AL mojo de ajo...............100');
+	doc.text(20, 170, 'AL mojo de ajo........100');
 	doc.setTextColor(50);
-	doc.text(20, 175, 'Relleno de mariscos...............100');
+	doc.text(20, 175, 'Relleno de mariscos....100');
 	doc.setTextColor(50);
-	doc.text(20, 180, 'A la veracruzana...............100');
+	doc.text(20, 180, 'A la veracruzana.......100');
 
 	doc.setTextColor(50);
 	doc.text(20, 190, 'Otros/Others');
@@ -75,15 +79,15 @@
 	doc.setTextColor(50);
 	doc.text(20, 200, 'Sopa de mariscos...........100');
 	doc.setTextColor(50);
-	doc.text(20, 205, 'Arroz blanco...............100');
+	doc.text(20, 205, 'Arroz blanco...................100');
 	doc.setTextColor(50);
-	doc.text(20, 210, 'Papas fritas..............100');
+	doc.text(20, 210, 'Papas fritas....................100');
 	doc.setTextColor(50);
-	doc.text(20, 215, 'Platanos fritos...............100');
+	doc.text(20, 215, 'Platanos fritos.................100');
 	doc.setTextColor(50);
-	doc.text(20, 220, 'Frijol...............100');
+	doc.text(20, 220, 'Frijol......................100');
 	doc.setTextColor(50);
-	doc.text(20, 225, 'Pan de cazón...............100');
+	doc.text(20, 225, 'Pan de cazón................100');
 
 	doc.setTextColor(50);
 	doc.text(120, 20, 'Bebidas');
@@ -92,23 +96,23 @@
 	doc.text(120, 30, 'Cerveza/Beer');
 
 	doc.setTextColor(50);
-	doc.text(120, 40, 'Sol...........100');
+	doc.text(120, 40, 'Sol...........................100');
 	doc.setTextColor(50);
-	doc.text(120, 45, 'Tecate Light...............100');
+	doc.text(120, 45, 'Tecate Light............100');
 	doc.setTextColor(50);
-	doc.text(120, 50, 'XX Laguer..............100');
+	doc.text(120, 50, 'XX Laguer...............100');
 	doc.setTextColor(50);
-	doc.text(120, 55, 'Chelada...............100');
+	doc.text(120, 55, 'Chelada..................100');
 	doc.setTextColor(50);
-	doc.text(120, 60, 'Michelada Clasica...............100');
+	doc.text(120, 60, 'Michelada Clasica......100');
 	doc.setTextColor(50);
-	doc.text(120, 65, 'Ojo Rojo...............100');
+	doc.text(120, 65, 'Ojo Rojo................100');
 	doc.setTextColor(50);
-	doc.text(120, 70, 'Michelada de sabores...............100');
+	doc.text(120, 70, 'Michelada de sabores......100');
 	doc.setTextColor(50);
-	doc.text(120, 75, 'Chamochela...............100');
+	doc.text(120, 75, 'Chamochela.............100');
 	doc.setTextColor(50);
-	doc.text(120, 80, 'Chamoychela...............100');
+	doc.text(120, 80, 'Chamoychela............100');
 
 	doc.setTextColor(50);
 	doc.text(120, 90, 'Preparados/Preparedr');
@@ -116,11 +120,53 @@
 	doc.setTextColor(50);
 	doc.text(120, 100, 'Margarita...........100');
 	doc.setTextColor(50);
-	doc.text(120, 105, 'Piña colada...............100');
+	doc.text(120, 105, 'Piña colada.........100');
 	doc.setTextColor(50);
-	doc.text(120, 110, 'Piñada..............100');
+	doc.text(120, 110, 'Piñada...............100');
 	doc.setTextColor(50);
-	doc.text(120, 115, 'Daiquiris...............100');
+	doc.text(120, 115, 'Daiquiris............100');
+
+	doc.setTextColor(50);
+	doc.text(120, 125, 'Ron');
+
+	doc.setTextColor(50);
+	doc.text(120, 135, 'Bacardi Blanco...........100');
+	doc.setTextColor(50);
+	doc.text(120, 140, 'Bacardi añejo.............100');
+	doc.setTextColor(50);
+	doc.text(120, 145, 'Bacardi solera............100');
+
+	doc.setTextColor(50);
+	doc.text(120, 155, 'Vodka');
+
+	doc.setTextColor(50);
+	doc.text(120, 165, 'Smirnoff...........100');
+
+	doc.setTextColor(50);
+	doc.text(120, 175, 'Brandy');
+
+	doc.setTextColor(50);
+	doc.text(120, 185, 'Azteca de Oro...........100');
+	doc.setTextColor(50);
+	doc.text(120, 190, 'Presidente.................100');
+
+	doc.setTextColor(50);
+	doc.text(120, 200, 'Aguas o refrescos/');
+	doc.setTextColor(50);
+	doc.text(120, 205, 'Sodas or Natural Juice');
+
+	doc.setTextColor(50);
+	doc.text(120, 215, 'Jamaica................100');
+	doc.setTextColor(50);
+	doc.text(120, 220, 'Limonada...............100');
+	doc.setTextColor(50);
+	doc.text(120, 225, 'Horchata................100');
+	doc.setTextColor(50);
+	doc.text(120, 230, 'Coca Cola...............100');
+	doc.setTextColor(50);
+	doc.text(120, 235, 'Coca Cola Light.........100');
+	doc.setTextColor(50);
+	doc.text(120, 240, 'Cristal...................100');
 
 
 
