--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa10/Programa10.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa10/Programa10.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><!--
 
-  Nombre: Francisco Montalvo Hidalgo
+  Nombre: Voltar Mezquita Correa
   Profesor:Melquizedec Moo Medina
   Programa: Generando Graficas en un html
   Fecha:13/mar/2019
