--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa11/index.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa11/index.html
@@ -1,5 +1,5 @@
 <!--
-  Nombre: Francisco Montalvo Hidalgo
+  Nombre: Voltar Mezquita Correa
   Profesor:Melquizedec Moo Medina
   Programa: Llamando una documento de texto con ajax
   Fecha:13/mar/2019
