--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa12/AngularJS/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa12/AngularJS/public_html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Nombre: Francisco Montalvo Hidalgo
+Nombre: Voltar Mezquita
 Profesor: Melquizedec Moo Medina
 Programa: AngularJS
 Description: Ejemplo de exposicion.
