--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa13/index.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa13/index.html
@@ -19,7 +19,7 @@ https://www.youtube.com/channel/UC3mOfIKkCJtlSdhsU9y77DA
 https://desarrolloweb.com/articulos/introduccion-jquery.html
 https://www.w3schools.com/jquery/
 
-  Nombre: Francisco Montalvo Hidalgo
+  Nombre: Voltar Mezquita Correa
   Profesor:Melquizedec Moo Medina
   Programa: Generando Graficas en un html
   Fecha:16/mar/2019
