--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa7/Programa7.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa7/Programa7.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<!--
+
+  Nombre: Voltar Mezquita Correa
+  Profesor:Melquizedec Moo Medina
+  Programa: Sacar, Leer y Visualizar calificaciones
+ -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
