--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/programa14/index.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/programa14/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Nombre: Francisco Montalvo Hidalgo
+Nombre: Voltar Mezquita Correa
 Profesor:Melquizedec Moo Medina
 Programa: Trabajando con hilos de programación en JS
 Fecha:11/mar/2019
