--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 14/index.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 14/index.html
@@ -12,6 +12,7 @@ Fecha: 13/mar/2019
     <meta charset="utf-8">
     <title></title>
     <script type="text/javascript" src="Concurrent.Thread.Compile.js"></script>
+    <link rel="stylesheet" href="Programm 14.css">
     <script type="text/javascript">
     function caballo(nombre,etiqueta,fin){
       var i=0;
@@ -36,8 +37,10 @@ Fecha: 13/mar/2019
 
   </head>
   <body>
-
+    <div class="titulo">
       <h1>Nombra a tus caballos</h1>
+    </div>
+
       <label>Nombre del primer Caballo: </label>
       <input type="text" id="inputCaballo1"><br>
       <label>Nombre del segundo Caballo: </label>
@@ -69,5 +72,6 @@ Fecha: 13/mar/2019
       </table>
 
     <button type="button" onclick="ejecutar()">Iniciar Arrancones</button>
+    <img class="caballos" src="img/caballos.gif" alt="Imagen no cargada">
   </body>
 </html>
