--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 08/IndexValidaciones.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 08/IndexValidaciones.html
@@ -13,12 +13,12 @@
 	<br>
 		<center><button onclick="Pedir();">Ingresar Dato</button></center>
 	<br>
-
-	<center><button onclick="Entero();">Función de tipo Intero</button></center>
-	<center><button onclick="Floatante();">Función de tipo Float</button></center>
-	<center><button onclick="Mayusculas();">Función de tipo Minusculas</button></center>
-	<center><button onclick="Minusculas();">Función de tipo Mayusculas</button></center>
-	<center><button onclick="Rango();">Función de tipo Rango</button></center>
+	
+	<center><button onclick="Entero()">Función de tipo Intero</button></center>
+	<center><button onclick="Floatante()">Función de tipo Float</button></center>
+	<center><button onclick="Mayusculas()">Función de tipo Minusculas</button></center>
+	<center><button onclick="Minusculas()">Función de tipo Mayusculas</button></center>
+	<center><button onclick="Rango()">Función de tipo Rango</button></center>
 	
 </body>
 </html>
