--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programm08.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programm08.html
@@ -16,7 +16,7 @@ jueves 07 de marzo del 2019 -->
                 <button type="button" onclick="getValidarFlotantes()">Ingrese un valor</button>
                 <button type="button" onclick="getMinusculas()">Ingrese una letra</button>
                 <button type="button" onclick="getMayusculas()">Ingrese una letra</button>
-          
+                <button type="button" onclick="getRango()">Ingresar rango</button>
             </form>
         </div>
     </body>
