--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa09/Pdf_generador.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa09/Pdf_generador.html
@@ -1,6 +1,14 @@
+<!--
+Nombre: Denilson Eloy Osorio Braga
+Profesor: Melquizedec Moo Medina
+Programa: Programa09
+Description: Creacion de un programa que utilize la libreria jspdf
+Fecha: 18/mar/2019
+-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Se colocan las librerias y sus links -->
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,6 +21,7 @@
   <body>
     <center><div id="navbar"><font size=26 face="Singlet">Control de justificacion</font></div></center>
     <div id="wrapper">
+      <!-- Se crean campos de texto para insertar los datos y posteriormente crear el pdf -->
       <input type="text" id="name" class="form-control form-control-success" placeholder="Nombre"><br>
       <input type="text" id="carrera" class="form-control form-control-success" placeholder="Carrera"><br>
       <input type="text" id="semestre" class="form-control form-control-success" placeholder="Semestre"><br>
