--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa08/validacion.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa08/validacion.html
@@ -1,3 +1,10 @@
+<!--
+Nombre: Denilson Eloy Osorio Braga
+Profesor: Melquizedec Moo Medina
+Programa: Programa08
+Description: Creacion de un pagina que valide datos
+Fecha: 10/mar/2019
+-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
