--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa12/AngularJS/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa12/AngularJS/public_html/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <!--
-Nombre: Jesus Alberto Lira Romero
+Nombre: Denilson Eloy Osorio Braga
 Profesor: Melquizedec Moo Medina
-Programa: AngularJS
-Description: Ejemplo de exposicion.
-            Generador de un documento responsivo mediante la Libreria
-            AngularJS, en el cual lo que ingreses sera mostrado en pantalla.
-Fecha: 13/mar/2019
+Programa: Programa12
+Description: Creacion de un programa que utilize la libreria AngularJS
+Fecha: 22/mar/2019
+-->
 -->
 <!--con ng-app inicializamos angular, a esto se le llama directiva-->
 <html ng-app>
@@ -16,7 +15,7 @@ Fecha: 13/mar/2019
 </head>
 <body>
  <!--ejecuta para inicializar la aplicacion-->
-<div ng-init="name='Karen Lozano'">
+<div ng-init="name='La roca Pedro'">
     <!--con {{name}} se imprime el contenido-->
     <h1>Welcome {{name}}</h1>
     <!--con este podremos modificar la variable de name-->
