--- a/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa14/Programa14.html
+++ b/TopicosAvanzados19A/public_html/Denilson_Osorio/Programa14/Programa14.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!--
+Nombre: Denilson Eloy Osorio Braga
+Profesor: Melquizedec Moo Medina
+Programa: Programa14
+Description: Creacion de un juego que simule un hipodromo
+Fecha: 18/mar/2019
+-->
+<html lang="en">
   <head>
-    <script src="Concurrent.Thread.Compile.js" type="text/javascript"></script>
-    <script>
-
-        function Caballo(numero, fin){
-          i=0;
-          while(i<=fin){
-            document.body.innerHTML +=numero +" "+ i + "mts"+ "<br>";
-            i++;
-          }
-        }
-
-Concurrent.Thread.create(caballo,0,1000);
-Concurrent.Thread.create(caballo,1,1000);
-Concurrent.Thread.create(caballo,3,1000);
-    </script>
+    <!-- Librerias Utilizadas-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="Concurrent.Thread.Compile.js"></script>
+    <script  src="programa14.js"></script>
+    <link rel="stylesheet" href="Programa14.css">
   </head>
+
   <body>
+    <div class="titulo">
+      <h1>Carrera de Caballos</h1>
+    </div>
+
+    <div class="subtitulo">
+          <h3>Hipodromo</h3>
+    </div>
+
+    <div class="nombreCaballos">
+      <h4>Inserta Nombres de los Caballos</h4>
+      <div class="col-xs-2"> <!-- tamaño del input -->
+        <!-- div para insertar nombre de los caballos -->
+        <input type="text" id="inputCaballo1" name="" value="" class="form-control" placeholder="Inserta Nombre"><br>
+        <input type="text" id="inputCaballo2" name="" value="" class="form-control" placeholder="Inserta Nombre"><br>
+        <input type="text" id="inputCaballo3" name="" value="" class="form-control" placeholder="Inserta Nombre"><br>
+      </div>
+        <button class="btn btn-success"onclick="ejecutar();">Iniciar Carrera</button> <!-- boton que ejecutar" -->
+    </div>
+
+<div class="separador"></div> <!-- separador de DIV -->
+
+<!-- div de metros recorridos por los caballos -->
+<h4>Carrera en curso</h4>
+<div class="metros">
+    <div class="col-xs-4"><!-- tamaño del input -->
+      <input type="text" id="metrosRecorridos1" class="form-control" name="" value=""><br> <!-- Utilizando estilos de bootstrap -->
+      <input type="text" id="metrosRecorridos2" class="form-control" name="" value=""><br>
+      <input type="text" id="metrosRecorridos3" class="form-control" name="" value=""><br>
+    </div>
+</div>
+<!--Alerta para cuando no cargue la imagen-->
+    <img class="caballos" src="IMG/RUN.gif" alt="La imagen no se ha podido Cargar :(">
 
   </body>
 </html>
