--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 08/Libreria.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 2/Programm 08/Libreria.html
@@ -1,5 +1,5 @@
 <!--
-Nombre: Jesus Alberto Lira Romero
+Nombre: Pedro Adrián Sánchez Cárdenas
 Profesor:Melquizedec Moo Medina
 Programa: LibreriasHTML
 Description: Implementacion de las lbrerias propias (LibreriaJS.js) creansdo
@@ -12,42 +12,39 @@ Fecha:10/mar/2019
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <!-- Librerias utilizadas -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Sniglet" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="LibreriaJS.js"> </script>
-    <title></title>
+    <title>Validaciones</title>
   </head>
   <body>
 
     <center><h1>Validaciones</h1></center>
+    <center><h3>Pedro Adrián Sánchez Cárdenas</h3></center>
 
     <!--Div Enetros -->
     <div class="ENTERO">
       <h2>Enteros</h2>
-      <input type="text" class="form-control form-control-success" id="entero" placeholder="Ingresa Numero ENTERO"><br>
-      <center><button type="button" onclick="valEntero()" class="btn btn-warning" name="button">Validar</button></center><br>
+      <input type="text" id="entero" placeholder="Ingresa Numero ENTERO"><br>
+      <button type="button" onclick="Entero()" class="btn btn-warning" name="button">Validar</button><br>
     </div>
     <!--Div Flotante -->
     <div class="FLOTANTE">
       <h2>Flotante</h2>
-      <input type="text" id="flotante" class="form-control form-control-success" placeholder="Ingresa Numero FLOTANTE"><br>
-      <center><button type="button" onclick="validarFlotante()" name="button" class="btn btn-danger">Validar</button></center><br>
+      <input type="text" id="flotante" placeholder="Ingresa Numero FLOTANTE"><br>
+      <button type="button" onclick="Flotante()" name="button" class="btn btn-danger">Validar</button><br>
     </div>
     <!--Div Mayusculas -->
     <div class="MAYUSCULAS">
       <h2>Mayúsculas</h2>
-      <input type="text" id="mayusculas" class="form-control form-control-success" placeholder="Ingresa PALABRAS CON MAYUSCULAS"><br>
-      <center><button type="button" onclick="validarMayusculas()" name="button" class="btn btn-success">Validar</button></center><br>
+      <input type="text" id="mayusculas" placeholder="Ingresa PALABRAS CON MAYUSCULAS"><br>
+      <button type="button" onclick="Mayusculas()" name="button" class="btn btn-success">Validar</button><br>
       <h4 id="validacionmayus"></h4>
     </div>
     <!--Div Minusculas -->
     <div class="MINUSCULAS">
       <h2>Letras Minúsculas</h2>
-      <input type="text" id="minusculas" class="form-control form-control-success" placeholder="Ingresa PALABRAS CON MINUSCULAS"><br>
-      <center><button type="button" onclick="validarMinusculas()" name="button" class="btn btn-dark">Validar</button></center><br>
+      <input type="text" id="minusculas" placeholder="Ingresa PALABRAS CON MINUSCULAS"><br>
+      <button type="button" onclick="Minusculas()" name="button" class="btn btn-dark">Validar</button><br>
       <h4 id="validacionmin"></h4>
     </div>
     <!--Div Rango -->
@@ -58,8 +55,8 @@ Fecha:10/mar/2019
       <input type="text" id="Rango2" placeholder="Ingresa el extremo superior"><br>
       <br>
       <label for="Entero">Valor</label>
-      <input type="text" id="Rango" class="form-control form-control-success" placeholder="Ingresa el numero a examinar"><br>
-      <center><button type="button" onclick="validarRango()" name="button" class="btn btn-primary">Validar</button></center><br>
+      <input type="text" id="Rango" placeholder="Ingresa el numero a examinar"><br>
+      <button type="button" onclick="Rango()" name="button" class="btn btn-primary">Validar</button><br>
       <h4 id="validacionrango"></h4>
     </div>
 
