--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programa09/pdf.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programa09/pdf.html
@@ -22,7 +22,7 @@
 		<center><input type="button" class="btn btn-warning" id="button" value="Descargar"/></center>
 
 	<script>
-	$('#button').click(function() {
+	$('#button').click(function() { //controlador de los click en los elementos de la pagina
 
 		 var doc = new jsPDF();
 
