--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programa10/Charts.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programa10/Charts.html
@@ -4,7 +4,7 @@
 	<script type="text/javascript" src="jquery-1.12.0.min.js"></script>
 	<script type="text/javascript" src="dist/Chart.bundle.min.js"></script>
 	<script type="text/javascript">
-	$(document).ready(function(){
+	$(document).ready(function(){//ejecuta la funcion cargada toda la pagina
 		var datos = {
 			type: "pie",
 			data : {
