--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programa11/EjemploExpo.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Programa11/EjemploExpo.html
@@ -11,10 +11,9 @@
 <script>
 function loadDoc() {
   var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
+  xhttp.onreadystatechange = function() {//contiene el evento y se ejecuta cuando se dispara el evento readyState
     if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("demo").innerHTML =
-      this.responseText;
+      document.getElementById("demo").innerHTML =  this.responseText;
     }
   };
   xhttp.open("GET", "ajax_info.txt", true);
