--- a/TopicosAvanzados19A/public_html/KennAyala/Programas/Unidad2/Programa12/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/KennAyala/Programas/Unidad2/Programa12/public_html/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<!--ejecuta para inicializar la aplicacion-->
-	<div ng-init="name='Karen Lozano'">
+	<div ng-init="name='Kenn Ayala'">
 		<!--con {{name}} se imprime el contenido-->
 		<h1>Welcome {{name}}</h1>
 		<!--con este podremos modificar la variable de name-->
