--- a/TopicosAvanzados19A/public_html/KennAyala/Programas/Unidad2/Programa07/Programa07.html
+++ b/TopicosAvanzados19A/public_html/KennAyala/Programas/Unidad2/Programa07/Programa07.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 
-
 <html lang="en" dir="ltr">
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!--librerias de bootstrap -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <meta charset="utf-8">
-<script type="text/javascript" src="program07.js">
-	
-</script>
-<!--Se llama al JS para que se ejecute en la pagina-->
+<script type="text/javascript" src="program07.js"></script>
+<!--Se llama al script-->
 <title></title>
 </head>
 <body>
