--- a/TopicosAvanzados19A/public_html/KennAyala/Programas/Unidad2/Programa14/programa14.html
+++ b/TopicosAvanzados19A/public_html/KennAyala/Programas/Unidad2/Programa14/programa14.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<style>
+body {
+	background-image: url("pista.jpg")
+}
+</style>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="Concurrent.Thread.Compile.js"></script>
 <script src="programa14.js"></script>
 <link rel="stylesheet" href="Programa14.css">
+
+
 </head>
 
 <body>
 	<div class="titulo">
 		<h1>Carrera de Caballos</h1>
-	</div>
-
-	<div class="subtitulo">
-		<h3>Hipodromo</h3>
 	</div>
 
 	<div class="nombreCaballos">
@@ -35,7 +39,9 @@
 		</div>
 	</div>
 
-	<img class="caballos" src="IMG/caballos.gif" alt="La imagen no se ha podido Cargar :(">
+	<div>
+		<img class="fondo" src="caballo.gif"></img>
+	</div>
 
 </body>
 </html>
