--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Programa14.css">
   </head>
 
-  <body style="background-color:#55F50D;">
+  <body background="Hipodromo.jpg">
     <div class="titulo">
 
       <h1>Hipodromo "Dwayne Pedro La Roca Johnson"</h1>
