--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa8/Programa8.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa8/Programa8.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <!--
-
   Nombre: Voltar Mezquita Correa
   Profesor:Melquizedec Moo Medina
   Programa: Validaciones de datos
@@ -11,15 +10,15 @@
     <script type="text/javascript" src="programa8.js"> <!-- llama al programa 8-->
 
     </script>
-    <title></title>
+    <title>Validaciones</title>
   </head>
   <body>
     <div id="divGrupo">
       <button onclick="Rango();">Escribir el rango</button>
-      <button onclick="MAYUSCULAS();">nombre en mayusculas</button>
+      <button onclick="MAYUSCULAS();">Nombre en mayusculas</button>
       <button onclick="minusculas();">Nombre en minusculas</button>
       <button onclick="Entero();">Escribir el numero</button>
-      <button onclick="Flotante();">escribir el numero</button>
+      <button onclick="Flotante();">Escribir el numero</button>
 
     </div>
   </body>
