--- a/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa10/Programa10.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/U2/Programa10/Programa10.html
@@ -7,12 +7,13 @@
  -->
 <html lang="en" dir="ltr">
   <head>
+    <!--librerias-->
     <script type="text/javascript" src="dist/jquery-1.12.0.min.js"> </script>
     <script type="text/javascript" src="dist/Chart.bundle.min.js"> </script>
     <script type="text/javascript">
-    //Le decimos a el programa que cuando el documento este cargado completamente ejecute la función
+    <!--cuando esta cargado se ejecutala-->
       $(document).ready(function(){
-        //Se crea una variable de tipo arreglo para despues enviarla a la grafica
+        <!--Se crea una variable de tipo arreglo para despues enviarla a la grafica-->
         var datos={
           type: "pie",
           data:{
@@ -45,9 +46,9 @@
               responsive: true,
             }
         };
-        //Aqui en una variable indicamos que se pondra una grafica en 2d para el documento
+        <!--Aqui en una variable indicamos que se pondra una grafica en 2d para el documento-->
         var canvas = document.getElementById('chart').getContext('2d');
-        //Pasamos los parametros a nuestra grafica
+        <!--Pasamos los parametros a la grafica-->
         window.pier = new Chart(canvas, datos);
 
         setInterval(function(){
@@ -60,12 +61,12 @@
               "#ABB0EB",
               "#C6ABEB"
             ],
-            //Se añaden valores random para graficar
+            <!--Se añaden valores random para graficar-->
             data: [getRandom(),getRandom(),getRandom(),getRandom(),getRandom()]
           };
-          //Le decimos a la variable datos que obtenga los valores random
+          <!--Le decimos a la variable datos que obtenga los valores random-->
           datos.data.datasets.push(newData);
-          //Se crea un ciclo para que la grafica se vaya actualizando en tiempo real cada 5 segundos
+          <!--Se crea un ciclo para que la grafica se vaya actualizando en tiempo real cada 5 segundos-->
           window.pie.update();
         },5000);
         //Funcion que genera los numeros random
