--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa08/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa08/public_html/index.html
@@ -21,20 +21,22 @@ autor: Karen Janett López Lozano
 </head>
 <body>
     <div>
-    <!--con estos botones se podra producir las validaciones segun la accion escogida del usuario-->
-    <button type="button" onclick="validarEntero();" name="botton" id="button" value="entero">Validar Entero</button><br>
-      <h4 id="validacionentero"></h4>
-      </div>
-      <button type="button" onclick="validarFloat();" name="" id="boton2" value="Float"></button>
-      <div>
-      <button type="button" onclick="convertir(1);" id="boton3" value="Mayuscula">Validar Mayusculas</button><br>
-      <h4 id="validacionmayuscula"></h4>
-      </div>
-      <div>
-        <button type="button" onclick="convertir(2);" id="boton4" value="Minuscula">Validar Minusculas</button><br>
+        <!--con estos botones se podra producir las validaciones segun la accion escogida del usuario-->
+        <button type="button" onclick="validarEntero();" name="botton" id="button" value="entero">Validar Entero</button><br>
+        <h4 id="validacionentero"></h4>
+    </div>
+    <button type="button" onclick="validarFloat();" name="button" id="boton2" value="float">Validar Float</button>
+    <div>
+        <button type="button" onclick="validarMayusculas();" id="boton3" value="Mayuscula">Validar Mayusculas</button><br>
+        <h4 id="validacionmayuscula"></h4>
+    </div>
+    <div>
+        <button type="button" onclick="validarMinusculas();" id="boton4" value="Minuscula">Validar Minusculas</button><br>
         <h4 id="validacionminuscula"></h4>
-        </div>
-    <button type="button" onclick="validarRango();" id="boton5" value="Rango"></button>
-    
+    </div>
+    <div>
+        <button type="button" onclick="validarRango();" id="boton5" value="Rango">Validar Rango</button><br>
+        <h4 id="validacionrango"></h4>
+    </div>
 </body>
 </html>
