--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
@@ -25,9 +25,9 @@
 
         <button type="submit"><a href="Inicio.html">Cerrar sesión</a></button>
             <br><h2>Bienvenido</h2>
-			<button type="submit"><a href="Ordenar.html">Compra</a></button>
-			<button type="submit"><a href="Inventario.html">Inventario</a></button>
-            <button type="submit"><a href="Ventas.html">Venta</a></button>
+			<button><a href="Ordenar.html">Compra</a></button>
+			<button><a href="Inventario.html">Inventario</a></button>
+            <button><a href="Ventas.html">Venta</a></button>
             </form>
         </div>
 
