--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Registro.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Papeleria y tienda "Hanabi"</title>
+    <title>Papeleria y tienda "Hanabi"</title>   <!--titulo de la pagina-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -15,14 +15,14 @@
         </div>
 <center>
 <div class="formulario">
-    <br><h2>Nuevo usuario</h2>
+    <br><h2>Nuevo usuario</h2> <!--titulo-->
     <form action="#">
      <!--ingresar los datos del usuario para su registro-->
-    <!--botones para su registro-->
         <p><input type="text" placeholder="Usuario" required></p>
         <p><input type="email" placeholder="Correo Electronico" required></p>
         <p><input type="password" placeholder="Contraseña" required></p>
         <p><input type="password" placeholder="Confirmar contraseña" required></p>
+        <!--botones para su registro-->
 				<button type="submit"><a href="Inicio.html">Registrarse</a></button>
         <button type="submit"><a href="vista.html">Entrar</a></button>
     </form>
