--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Contraseña.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Contraseña.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--titulo de la pagina-->
     <title>Papeleria y tienda "Hanabi"</title>
+    <!--librerias-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/estilos.css">
+    <!--color de la pagina-->
     <body style="background-color: #00D3BC;">
 </body>
 </head>
@@ -19,13 +22,13 @@
         <div class="formulario">
 
             <br><h2>Recuperar</h2>
-<<<<<<< HEAD
+
             <form action="#">
+              <!--campos de correo y contraseña-->
                 <p><input type="email" placeholder="Correo" required></p>       <!--ingresa su correo para que se le mande su usuario y contraseña-->
-=======
                 <p><input type="email" placeholder="Correo" required></p>
->>>>>>> 58c56019dac17096fc8385d869c287a6c09a4ee5
                 <p><input type="email" placeholder="Confirmar correo" required></p>
+                <!--botones de enviar y regresar-->
                 <button type="submit"><a href="Inicio.html">Enviar</a></button>
                 <button type="submit"><a href="Inicio.html">Regresar</a></button>
             </form>
