--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inventario.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/Inventario.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Crud</title> <!--Titulo de la pagina-->
+<!--librerias-->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!--librerias-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
