--- a/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
+++ b/TopicosAvanzados19A/public_html/VoltarMezquita/Proyecto/vista.html
@@ -24,7 +24,8 @@
 
 
         <button type="submit"><a href="Inicio.html">Cerrar sesión</a></button>
-            <br><h2>Bienvenido</h2>
+            <br><h2>Bienvenido</h2> <!--titulo-->
+            <!--botones-->
 			<button type="submit"><a href="Ordenar.html">Compra</a></button>
 			<button type="submit"><a href="Inventario.html">Inventario</a></button>
             <button type="submit"><a href="Ventas.html">Venta</a></button>
