--- a/TopicosAvanzados19A/public_html/RodrigoDiaz/Programa07/index.html
+++ b/TopicosAvanzados19A/public_html/RodrigoDiaz/Programa07/index.html
@@ -8,12 +8,14 @@ Description: Programa para leer calificaciones de un grupo
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<script type="text/javascript"    src="Programa02.js"></script>
-</head>
-<body>
-	
-</body>
+	<head>
+		<script src="Programa07.js" type="text/javascript"></script>
+		<meta charset="UTF-8">
+		<title></title>
+	</head>
+	<body>
+		<center> <button onclick="getCantidadAlumnos();">Escribir Cantidad de Alumnos</button> <br> </center>
+		<center> <button onclick="leerCalificaciones();">Escribir Calificaciones</button> <br> </center>
+		<center> <button onclick="getPromedio();">Obtener Promedio</button> <br> </center>
+	</body>
 </html>
