--- a/TopicosAvanzados19A/public_html/RodrigoDiaz/Programa14/programa14.html
+++ b/TopicosAvanzados19A/public_html/RodrigoDiaz/Programa14/programa14.html
@@ -42,7 +42,7 @@
       <input type="text" id="inputCaballo2"><br>
       <label>Nombre del tercer Caballo: </label>
       <input type="text" id="inputCaballo3">
-      <table style="border: solid 1px black;">
+      <br>
         <thead>
           <th colspan="2" >Carreras</th>
         </thead>
@@ -64,9 +64,9 @@
             <td><input type="text" id="caballo3" readonly="readonly"><br></td>
           </tr>
         </tbody>
-      </table>
+     
 
-    <button type="button" onclick="ejecutar()">Iniciar Arrancones</button>
+    <button type="button" onclick="ejecutar()">Iniciar</button>
     <img class="caballos" src="caballos.gif" alt="La imagen no se ha podido Cargar :(">
   </body>
 </html>
