--- a/TopicosAvanzados19A/public_html/RodrigoDiaz/Programa08/Programa08.html
+++ b/TopicosAvanzados19A/public_html/RodrigoDiaz/Programa08/Programa08.html
@@ -1,57 +1,18 @@
-<!DOCTYPE html>
+<!DOCTY<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="Libreria.js" charset="utf-8"></script>
+    <script src="programa8.js" charset="utf-8"></script>
   </head>
   <body>
-    <head>
-      <h1>Validaciones</h1>
-    </head>
-    <!--Div for Integer -->
-    <div class="ENTERO">
-      <h2>Enteros</h2>
-      <label for="Entero">Número Entero</label>
-      <input type="text" id="entero"><br>
-      <button type="button" onclick="validarEntero()" name="button">Validar</button><br>
-      <h4 id="validacionentero"></h4>
-    </div>
-    <!--Div for Float -->
-    <div class="FLOTANTE">
-      <h2>Flotante</h2>
-      <label for="Entero">Número flotante</label>
-      <input type="text" id="flotante"><br>
-      <button type="button" onclick="validarFlotante()" name="button">Validar</button><br>
-      <h4 id="validacionflotante"></h4>
-    </div>
-    <!--Div for UpperCase -->
-    <div class="MAYUSCULAS">
-      <h2>Mayúsculas</h2>
-      <label for="Entero">Letras Mayúsculas</label>
-      <input type="text" id="mayusculas"><br>
-      <button type="button" onclick="validarMayusculas()" name="button">Validar</button><br>
-      <h4 id="validacionmayus"></h4>
-    </div>
-    <!--Div for LowerCase -->
-    <div class="MINUSCULAS">
-      <h2>Minúsculas</h2>
-      <label for="Entero">Letras Minúsculas</label>
-      <input type="text" id="minusculas"><br>
-      <button type="button" onclick="validarMinusculas()" name="button">Validar</button><br>
-      <h4 id="validacionmin"></h4>
-    </div>
-    <!--Div for Range-->
-    <div class="Rango">
-      <h2>Rango</h2>
-      <label for="Entero">Valor</label>
-      <input type="text" id="Rango"><br>
-      <label for="Entero">Rangos</label>
-      <input type="text" id="Rango1"><input type="text" id="Rango2"><br>
-      <button type="button" onclick="validarRango()" name="button">Validar</button><br>
-      <h4 id="prueba"></h4>
-      <h4 id="validacionrango"></h4>
-    </div>
+
+<!--se Agregan los botones que llamaran a los diferentes metodos de validacion -->
+
+  <button onclick="pedirnum('a');">Validar numero entero</button>
+<button onclick="pedirnum('b');">Validar numero float</button>
+<button onclick="pedirnum('c');">Validar Mayusculas</button>
+<button onclick="pedirnum('d');">Validar Minusculas</button>
+<button onclick="pedirnum('e');">Validar Rango</button>
   </body>
 </html>
