se agrego los comentarios en programas

--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/AngularJS/public_html/prueba1.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/AngularJS/public_html/prueba1.html
@@ -1,4 +1,11 @@
 <!doctype html>
+<!--
+Source:Programa12
+Description: JQuery
+Equipo: 4
+Integrantes: Karen, Clauded y Voltar
+Date: 14/03/19
+-->
     <!--con ng-app inicializamos angular, a esto se le llama directiva-->
     <html ng-app>
         <head>
