--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa13/public_html/jquery/index.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa13/public_html/jquery/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <!--
+Source:Programa13
+Description: JQuery
+Equipo: 5
+Integrantes: Ronal y Suaste
+Date: 14/03/19
+
 acciones vistas en este jquery
 
 .click() permite darle funcion a un boton
@@ -24,6 +30,7 @@ https://www.w3schools.com/jquery/
     <head>
         <meta charset="UTF-8">
         <title>ejemplo</title>       
+        <!--librerias-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estilo.css">
         <script src="js/jquery-3.2.1.min.js"></script>
