--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa14/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/Programa14/public_html/index.html
@@ -9,6 +9,7 @@ autor: Karen Janett López Lozano
   <head>
     <meta charset="utf-8">
     <title></title>
+   <!--librerias--> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script type="text/javascript" src="Concurrent.Thread.Compile.js"></script>
@@ -42,7 +43,7 @@ autor: Karen Janett López Lozano
     <div class="titulo">
       <h1>Nombra a tus caballos</h1>
     </div>
-
+      <!--captura de datos del usuario-->
       <label>Nombre del primer Caballo: </label>
       <input type="text" id="inputCaballo1"><br>
       <label>Nombre del segundo Caballo: </label>
@@ -54,6 +55,7 @@ autor: Karen Janett López Lozano
           <th colspan="2" >Carreras</th>
         </thead>
         <tbody>
+            <!--resultados de la carrera-->
           <tr>
             <th>Nombre del Caballo:</th>
             <th>Resultados:</th>
@@ -72,7 +74,7 @@ autor: Karen Janett López Lozano
           </tr>
         </tbody>
       </table>
-
+      <!--boton para comenzar la carrera-->
     <button type="button" onclick="ejecutar()">Iniciar Arrancones</button>
     <img class="caballos" src="img/caballos.gif" alt="La imagen no se ha podido Cargar :(">
   </body>
