--- a/TopicosAvanzados19A/public_html/Karen_Lopéz/programa11/public_html/index.html
+++ b/TopicosAvanzados19A/public_html/Karen_Lopéz/programa11/public_html/index.html
@@ -9,15 +9,16 @@ Date: 13/03/19
 
 <html>
 <body>
-
 <div id="demo">
 <h1>The XMLHttpRequest Object</h1>
 <button type="button" onclick="loadDoc()">Change Content</button>
 </div>
 
 <script>
+    //<!--funcion que permitira ingresar los datos del HTML y despues nos mostrara lo que hay en el txt-->
 function loadDoc() {
   var xhttp = new XMLHttpRequest();
+  //<!--aquí se captura al xampp la funcion y lo demostrara,
   xhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
       document.getElementById("demo").innerHTML =
@@ -28,31 +29,6 @@ function loadDoc() {
   xhttp.send();
 }
 </script>
-
 </body>
 </html>
 =======
-<!DOCTYPE html>
-<html>
-<body>
-
-<div id="demo">
-<h1>The XMLHttpRequest Object</h1>
-<button type="button" onclick="loadDoc()">Change Content</button>
-</div>
-
-<script>
-function loadDoc() {
-  var xhttp = new XMLHttpRequest();
-  xhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-      document.getElementById("demo").innerHTML =
-      this.responseText;
-    }
-  };
-  xhttp.open("GET", "ajax_info.txt", true);
-  xhttp.send();
-}
-</script>
-</body>
-</html>
