--- a/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
+++ b/TopicosAvanzados19A/public_html/JonathanEuan/U2/Program14.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-    <img class="caballos" src="CarreraCaballos.gif">
+    <img width="20%" height="30%" class="caballos" src="CarreraCaballos.gif">
 
   </body>
 </html>
