--- a/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 1/Proyecto_Unidad1/Código/Index_Principal.html
+++ b/TopicosAvanzados19A/public_html/Pedro_Sánchez/Unidad 1/Proyecto_Unidad1/Código/Index_Principal.html
@@ -122,7 +122,7 @@ h3, h4 {
 
 .google-maps {
 	position: relative;
-	padding-bottom: 75%; // This is the aspect ratio height : 0;
+	padding-bottom: 75%;
 	overflow: hidden;
 }
 
@@ -294,7 +294,6 @@ span.psw {
 	animation: animatezoom 0.6s
 }
 
-@
 -webkit-keyframes animatezoom {
 	from {-webkit-transform: scale(0)
 }
@@ -304,7 +303,7 @@ to {
 }
 
 }
-@
+
 keyframes animatezoom {
 	from {transform: scale(0)
 }
@@ -424,7 +423,7 @@ to {
           </ul>
         </li>
 -->
-<<<<<<< HEAD
+
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
